objects/TempTest__Token_Temp__c.object
<CustomObject   >
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TempTest__Token_Type__c</fullName>
        <label>Token Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempTest__Token_Value__c</fullName>
        <label>Token Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempTest__UID__c</fullName>
        <label>UID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Token Temp</label>
</CustomObject>